# artifacts/api-server/src/routes/index.ts
@@ -4,6 +4,7 @@ import newsRouter from "./news";
 import eventsRouter from "./events";
 import staffRouter from "./staff";
 import galleryRouter from "./gallery";
+import admissionsRouter from "./admissions";
 
 const router: IRouter = Router();
 
@@ -12,5 +13,6 @@ router.use("/news", newsRouter);
 router.use("/events", eventsRouter);
 router.use("/staff", staffRouter);
 router.use("/gallery", galleryRouter);
+router.use("/admissions", admissionsRouter);
 
 export default router;
